--- a/app/src/main/res/layout/command_list_item.xml
+++ b/app/src/main/res/layout/command_list_item.xml
@@ -13,7 +13,7 @@
         />
 
     <ImageButton
-        android:id="@+id/record"
+        android:id="@+id/record_button"
         android:src="@drawable/ic_mic_off"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,11 +22,11 @@
         />
 
     <ImageButton
-        android:id="@+id/play"
+        android:id="@+id/play_button"
         android:src="@drawable/ic_play_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/button_margin"
-        android:layout_toLeftOf="@id/record"
+        android:layout_toLeftOf="@id/record_button"
         />
 </RelativeLayout>
