--- a/app/src/main/res/layout/command_list_item.xml
+++ b/app/src/main/res/layout/command_list_item.xml
@@ -23,7 +23,7 @@
 
     <ImageButton
         android:id="@+id/play_button"
-        android:src="@drawable/ic_play_arrow"
+        android:src="@drawable/selector_play_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/button_margin"
