--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimaryLight">#7E57C2</color>
     <color name="colorAccent">#f44336</color>
     <color name="white">#FFFFFF</color>
+    <color name="disabled">#A0A0A0</color>
 </resources>
