--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -7,10 +7,14 @@
             android:icon="@drawable/ic_queue_music"
             android:title="@string/nav_corpus"
             android:checked="true"/>
-        <item
+        <!--<item
             android:id="@+id/nav_recognize"
             android:icon="@drawable/ic_hearing"
-            android:title="@string/nav_recognize" />
+            android:title="@string/nav_recognize" />-->
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_settings"
+            android:title="@string/nav_settings"/>
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_help"
